--- a/style.css
+++ b/style.css
@@ -8,9 +8,17 @@ body {
 }
 
 .logo {
-    width: 45%;
+    width: 100%;
     margin-top: 2%;
     margin-bottom: 2%;
+}
+
+@media only screen and (min-device-width: 720px) {
+    .logo {
+        width: 50%;
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
 }
 
 h1 {
